# sqr-champions

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh  gunicorn_conf.py  pyproject.toml  pytest.ini  qodana.yml  run_web.sh  server.Dockerfile  web.Dockerfile
.github/workflows/: code_quality.yml  docker_scanner.yml  main.yml
backend/: Dockerfile  __main__.py  config.py  pyproject.toml  server.py  sources.py
backend/entity/: auth_requests.py  auth_responses.py  auth_settings.py  feedback.py  link.py  requests.py  responses.py  thread.py  token.py  user.py
backend/entrypoint/: auth.py  feedback.py  user.py
backend/entrypoint/thread/: feedback.py  thread.py
backend/gateway/: db_gw.py  feedback_gw.py  link_gw.py  user_gw.py
backend/utils/: auth.py
frontend/: Comment Hub.py  Main.py  NetworkService.py  SessionService.py  config.py  pyproject.toml
frontend/pages/: 1_auth.py  1_profile.py
tests/: pyproject.toml
tests/test_backend/test_api/: conftest.py  test_auth.py  test_threads.py  test_user.py
tests/test_backend/test_gateway/: test_feedback_gw.py  test_link_gw.py  test_user_gw.py
tests/test_frontend/selenium/: config.py  conftest.py
tests/test_frontend/selenium/data/: data.py  user.py
tests/test_frontend/selenium/locators/: base_page_locators.py  create_thread_locators.py  logged_in_locators.py  main_page_locators.py  sign_in_locators.py  sign_up_locators.py  thread_page_locators.py
tests/test_frontend/selenium/pages/: base_page.py  create_thread.py  main_page.py  sign_in_page.py  sign_up_page.py  thread_page.py
tests/test_frontend/selenium/tests/: tests.py
