[tool.poetry]
name = "sqr-champions"
version = "0.1.0"
description = ""
authors = ["Lnsfna <alinasafina02@mail.ru>"]
readme = "README.md"
packages = [{include = "sqr_champions"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
fastapi-another-jwt-auth = "^0.1.10"
validators = "^0.28.0"
uvicorn = "^0.29.0"
gunicorn = "^21.2.0"
python-multipart = "^0.0.9"

[tool.poetry.dev-dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
