[tool.poetry]
name = "sqr-champions"
version = "0.1.0"
description = ""
authors = ["Lnsfna <alinasafina02@mail.ru>", "SHREDDING8 <zavrazhnov.zhora@mail.ru>", "ananastya1 <nastya10_tv@mail.ru>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.12"
python-multipart = "^0.0.9"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
fastapi-another-jwt-auth = "^0.1.10"
validators = "^0.28.0"
flake8 = "^7.0.0"

# front
streamlit = "^1.33.0"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
